objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Projects</relationshipLabel>
        <relationshipName>Customer_Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Team_Members__c</fullName>
        <description>Contains the number of active team members corresponding to this project.</description>
        <label>Number of Team Members</label>
        <summaryFilterItems>
            <field>Project_Team_Member__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Team_Member__c.Customer_Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Customer Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>IsActive__c</columns>
        <columns>Number_of_Team_Members__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Customer_Projects</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Customer Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>